syntax = "proto3";

message Task {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 priority = 4;
}

message CreateRequest {
    string token = 1;
    Task task = 2;
}

message CreateResponse {
    Task task = 1;
}

message RetrieveRequest {
    string token = 1;
    string id = 2;
}

message RetrieveResponse {
    Task task = 1;
}

message UpdateRequest { 
    string token = 1;
    Task task = 2;
}

message UpdateResponse {
    Task task = 1;
}

message DeleteRequest {
    string token = 1;
    string id = 2;
}

message DeleteResponse {
    int64 success = 1;
}

message RetrieveAllRequest {
    string token = 1;
}

message RetrieveAllResponse {
    repeated Task tasks = 1;
}

service TodoService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc RetrieveAll(RetrieveAllRequest) returns (RetrieveAllResponse);
}